add initial project structure with core models, repositories, services, and configuration